<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_bank_sampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/brown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/img_pokemon"
            android:layout_width="157dp"
            android:layout_height="127dp"
            android:layout_marginTop="20dp"
            tools:src ="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_name_pokemon"
            android:contentDescription="@string/pokemon_picture" />

        <TextView
            android:id="@+id/tv_name_pokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_pokemon" />


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="Alamat location"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_pokemon" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>